QMicroz v0.3
* Added the ability to work with buffered data.
    Creating zip archives from QByteArrays. UnZipping into RAM buffer.
* Extraction of individual files has been implemented.

QMicroz v0.2
* Now files are zipped directly, without full buffering in ram.
* The modification date of files is now saved when archiving.
* Improved handling of file and folder paths.