@@ -14,9 +14,24 @@
 
 QMicroz::QMicroz() {}
 
+QMicroz::QMicroz(const char* zip_path)
+{
+    setZipFile(QString(zip_path));
+}
+
 QMicroz::QMicroz(const QString &zip_path)
 {
     setZipFile(zip_path);
+}
+
+QMicroz::QMicroz(const QByteArray &buffered_zip)
+{
+    setZipBuffer(buffered_zip);
+}
+
+QMicroz::~QMicroz()
+{
+    closeArchive();
 }
 
 bool QMicroz::setZipFile(const QString &zip_path)
@@ -39,9 +54,43 @@ bool QMicroz::setZipFile(const QString &zip_path)
     return false;
 }
 
-QMicroz::~QMicroz()
+bool QMicroz::setZipBuffer(const QByteArray &buffered_zip)
 {
-    closeArchive();
+    // open zip archive
+    mz_zip_archive *_za = new mz_zip_archive();
+
+    if (mz_zip_reader_init_mem(_za, buffered_zip.constData(), buffered_zip.size(), 0)) {
+        // close currently opened if any
+        closeArchive();
+
+        // set the new one
+        m_archive = _za;
+        m_zip_path.clear();
+        updateZipContents();
+        return true;
+    }
+
+    qWarning() << "Failed to open buffered zip";
+    delete _za;
+    return false;
+}
+
+void QMicroz::setOutputFolder(const QString &output_folder)
+{
+    m_output_folder = output_folder;
+}
+
+const QString& QMicroz::outputFolder()
+{
+    if (m_output_folder.isEmpty()) {
+        // buffered zip with no m_output_folder setted
+        if (m_zip_path.isEmpty())
+            qDebug() << "No output folder setted";
+        else
+            m_output_folder = QFileInfo(m_zip_path).absolutePath();
+    }
+
+    return m_output_folder;
 }
 
 bool QMicroz::closeArchive()
@@ -80,7 +129,7 @@ const ZipContentsList& QMicroz::updateZipContents()
     return m_zip_contents;
 }
 
-const ZipContentsList& QMicroz::zipContents()
+const ZipContentsList& QMicroz::contents()
 {
     if (m_zip_contents.isEmpty())
         updateZipContents();
@@ -88,112 +137,39 @@ const ZipContentsList& QMicroz::zipContents()
     return m_zip_contents;
 }
 
-BufFileList QMicroz::extract_to_ram() const
+bool QMicroz::extractAll()
 {
-    qDebug() << "Extracting to ram:" << m_zip_path;
-
-    BufFileList _res;
-
     if (!m_archive) {
-        qWarning() << "No archive setted";
-        return _res;
-    }
-
-    mz_zip_archive *_za = static_cast<mz_zip_archive *>(m_archive);
-
-    // extracting...
-    const mz_uint _num_items = mz_zip_reader_get_num_files(_za);
-
-    for (uint it = 0; it < _num_items; ++it) {
-        const QString _filename = tools::za_item_name(_za, it);
-        if (_filename.isEmpty()) {
-            break;
-        }
-
-        // subfolder, no data to extract
-        if (_filename.endsWith('/'))
-            continue;
-
-        qDebug() << "Extracting" << (it + 1) << '/' << _num_items << _filename;
-
-        // extract file
-        const QByteArray _data = tools::extract_to_buffer(_za, it);
-        if (!_data.isNull())
-            _res[_filename] = _data;
-    }
-
-    qDebug() << "Unzipped:" << _res.size() << "files";
-    return _res;
-}
-
-BufFile QMicroz::extract_to_ram(const QString &file_name)
-{
-    return extract_to_ram(findIndex(file_name));
-}
-
-BufFile QMicroz::extract_to_ram(const int file_index) const
-{
-    if (file_index == -1)
-        return BufFile();
-
-    qDebug() << "Extracting to ram buffer:" << m_zip_path;
-
-    BufFile _res;
-
-    if (!m_archive) {
-        qWarning() << "No archive setted";
-        return _res;
-    }
-
-    mz_zip_archive *_za = static_cast<mz_zip_archive *>(m_archive);
-
-    const QString _filename = tools::za_item_name(_za, file_index);
-    if (_filename.isEmpty())
-        return _res;
-
-    // subfolder, no data to extract
-    if (_filename.endsWith('/')) {
-        qDebug() << "Subfolder, no data to extract:" << _filename;
-        return _res;
-    }
-
-    qDebug() << "Extracting:" << _filename;
-
-    // extract file
-    const QByteArray _data = tools::extract_to_buffer(_za, file_index);
-
-    if (!_data.isNull()) {
-        _res.m_name = _filename;
-        _res.m_data = _data;
-
-        qDebug() << "Unzipped:" << _data.size() << "bytes";
-    }
-
-    return _res;
-}
-
-bool QMicroz::extractAll(const QString &output_folder) const
-{
-    return extract(m_zip_path, output_folder);
-}
-
-bool QMicroz::extractFile(const QString &file_path, const QString &output_folder)
-{
-    return extractFile(findIndex(file_path), output_folder);
-}
-
-bool QMicroz::extractFile(const int file_index, const QString &output_folder) const
-{
-    if (file_index == -1)
+        qDebug() << "No zip archive setted";
         return false;
+    }
+
+    if (outputFolder().isEmpty())
+        return false;
+
+    // zip file setted
+    if (!m_zip_path.isEmpty())
+        return extract(m_zip_path, outputFolder());
+
+
+    // mem zip (buffered) setted
+    return tools::extract_all_to_disk(static_cast<mz_zip_archive*>(m_archive), outputFolder());
+}
+
+bool QMicroz::extractFile(int file_index)
+{
+    if (!m_archive) {
+        qDebug() << "No zip archive setted";
+        return false;
+    }
+
+    if (file_index == -1 || outputFolder().isEmpty())
+        return false;
+
+    const QString &output_folder = outputFolder();
 
     qDebug() << "Extract:" << m_zip_path;
     qDebug() << "Output folder:" << output_folder;
-
-    if (!m_archive) {
-        qDebug() << "No archive setted";
-        return false;
-    }
 
     // create output folder if it doesn't exist
     if (!tools::createFolder(output_folder)) {
@@ -232,6 +208,95 @@ bool QMicroz::extractFile(const int file_index, const QString &output_folder) co
     return true;
 }
 
+bool QMicroz::extractFileByName(const QString &file_name)
+{
+    return extractFile(findIndex(file_name));
+}
+
+BufFileList QMicroz::extract_to_ram() const
+{
+    BufFileList _res;
+
+    if (!m_archive) {
+        qWarning() << "No archive setted";
+        return _res;
+    }
+
+    qDebug() << "Extracting to ram:" << (m_zip_path.isEmpty() ? "buffered zip" : m_zip_path);
+
+    mz_zip_archive *_za = static_cast<mz_zip_archive *>(m_archive);
+
+    // extracting...
+    const mz_uint _num_items = mz_zip_reader_get_num_files(_za);
+
+    for (uint it = 0; it < _num_items; ++it) {
+        const QString _filename = tools::za_item_name(_za, it);
+        if (_filename.isEmpty()) {
+            break;
+        }
+
+        // subfolder, no data to extract
+        if (_filename.endsWith('/'))
+            continue;
+
+        qDebug() << "Extracting" << (it + 1) << '/' << _num_items << _filename;
+
+        // extract file
+        const QByteArray _data = tools::extract_to_buffer(_za, it);
+        if (!_data.isNull())
+            _res[_filename] = _data;
+    }
+
+    qDebug() << "Unzipped:" << _res.size() << "files";
+    return _res;
+}
+
+BufFile QMicroz::extract_to_ram(int file_index) const
+{
+    BufFile _res;
+
+    if (!m_archive) {
+        qWarning() << "No archive setted";
+        return _res;
+    }
+
+    if (file_index == -1)
+        return _res;
+
+    qDebug() << "Extracting to ram:" << (m_zip_path.isEmpty() ? "buffered zip" : m_zip_path);
+
+    mz_zip_archive *_za = static_cast<mz_zip_archive *>(m_archive);
+
+    const QString _filename = tools::za_item_name(_za, file_index);
+    if (_filename.isEmpty())
+        return _res;
+
+    // subfolder, no data to extract
+    if (_filename.endsWith('/')) {
+        qDebug() << "Subfolder, no data to extract:" << _filename;
+        return _res;
+    }
+
+    qDebug() << "Extracting:" << _filename;
+
+    // extract file
+    const QByteArray _data = tools::extract_to_buffer(_za, file_index);
+
+    if (!_data.isNull()) {
+        _res.m_name = _filename;
+        _res.m_data = _data;
+
+        qDebug() << "Unzipped:" << _data.size() << "bytes";
+    }
+
+    return _res;
+}
+
+BufFile QMicroz::extract_file_to_ram(const QString &file_name)
+{
+    return extract_to_ram(findIndex(file_name));
+}
+
 // STATIC functions ---->>>
 bool QMicroz::extract(const QString &zip_path)
 {
@@ -256,39 +321,10 @@ bool QMicroz::extract(const QString &zip_path, const QString &output_folder)
     }
 
     // extracting...
-    bool is_success = true;
-    const bool is_out_ends_slash = (output_folder.endsWith('/') || output_folder.endsWith('\\'));
-    const mz_uint _num_items = mz_zip_reader_get_num_files(__za);
+    bool is_success = tools::extract_all_to_disk(__za, output_folder);
 
-    for (uint it = 0; it < _num_items; ++it) {
-        const QString _filename = tools::za_item_name(__za, it);
-
-        qDebug() << "Extracting" << (it + 1) << '/' << _num_items << _filename;
-
-        const QString _outpath = is_out_ends_slash ? output_folder + _filename
-                                                   : output_folder % tools::s_sep % _filename;
-
-        // create new path on the disk
-        const QString _parent_folder = QFileInfo(_outpath).absolutePath();
-        if (!tools::createFolder(_parent_folder)) {
-            is_success = false;
-            break;
-        }
-
-        // subfolder, no data to extract
-        if (_filename.endsWith(tools::s_sep))
-            continue;
-
-        // extract file
-        if (!tools::extract_to_file(__za, it, _outpath)) {
-            is_success = false;
-            break;
-        }
-    }
-
-    // result
+    // finish
     tools::za_close(__za);
-    qDebug() << (is_success ? "Unzip complete." : "Unzip failed.");
     return is_success;
 }
 
